fix issues in alignment of left side bar

--- a/responsive.css
+++ b/responsive.css
@@ -10,16 +10,21 @@
  
  .left-col__container{
   margin-right:0;
+  align-items: flex-end;
  }
  
 
  .left-col__menu__text{
    display: none;
  }
+ .left-col__menu__item{
+   margin-top: 14px;
+ }
 
- .left-col__menu__container{
-
+ .left-col__menu__container {
   font-size: 25px;
+  padding: 12px 16px;
+  border-radius: 50%;
  }
  .left-col__user-footer__info, .left-col__user-footer__icon{
    display: none;
